dast bootup